--- a/index.html
+++ b/index.html
@@ -8,33 +8,39 @@
       font-family: Arial, sans-serif;
       margin: 40px;
       line-height: 1.6;
+      padding-top: 70px;
     }
     h1 {
-      color: #2c3e50;
+      color: #ffffff;
+      font-size: 3.5em;
     }
     h2 {
       color: #34495e;
       margin-top: 40px;
     }
     .subtitle {
-      font-size: 1.2em;
-      color: #555;
+      font-size: 2em;
+      color: #bcb9b9;
       margin-top: 0;
-      margin-bottom: 2em;
+      margin-bottom: 3em;
     }
     .navbar {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      margin: 0;
       background-color: #f5f5f5;
       padding: 10px 20px;
-      position: sticky;
-      top: 0;
-      z-index: 100;
       border-bottom: 1px solid #ccc;
       display: flex;
       justify-content: space-between;
       align-items: center;
+      z-index: 1000;
     }
     .nav-left a {
       margin-right: 20px;
+      font-size: 20px;
       text-decoration: none;
       color: #2c3e50;
       font-weight: bold;
@@ -45,6 +51,7 @@
     .nav-right {
       font-weight: bold;
       color: #2c3e50;
+      padding-right: 50px;
     }
     html {
       scroll-behavior: smooth;
@@ -53,12 +60,10 @@
       display: flex;
       justify-content: center;
       gap: 20px;
-      margin-top: 20px;
     }
     .image-row figure {
       text-align: center;
       width: 30%;
-      margin: 0;
     }
     .image-row img {
       width: 100%;
@@ -69,12 +74,28 @@
       color: #555;
       margin-top: 8px;
     }
-  </style>
+    figcaption {
+      font-size: 14px;
+      color: #555;
+      margin-top: 8px;
+    }
+    .banner {
+      background-image: url('imgs/banner.png');
+      background-size: cover;
+      background-repeat: no-repeat;
+      /* Shift image up so top is cropped more */
+      background-position: center top 80%; /* or use background-position-y */
+      padding: 75px 0px 350px 0px;
+      text-align: center;
+      color: white;
+      border-radius: 8px;
+      position: relative;
+    }
+</style>
 </head>
 <body>
-
   <!-- Navigation Bar -->
-  <nav class="navbar">
+  <nav id="navbar" class="navbar">
     <div class="nav-left">
       <a href="#benchmarks">Benchmarks</a>
       <a href="#custom-dataset">Custom Dataset</a>
@@ -88,29 +109,35 @@
     </div>
   </nav>
 
-  <h1>Depth Estimation Under Degradations</h1>
-  <p class="subtitle">Exploring the robustness of monocular depth models on imperfect images.</p>
+  <div class="banner" style="text-align: center;">
+  <h1>Benchmarking Depth Estimation Models on Degraded Visual Inputs</h1>
+  <p class="subtitle"> </p>
+  </div>
 
   <h2 id="benchmarks">Existing Benchmarks</h2>
   <p>
     We evaluate model robustness using several standard RGB-D datasets:
     <ul>
       <li><strong>DIODE</strong>: Includes a diverse set indoor/outdoor scenes.</li>
+      <p></p>
       <img src="https://production-media.paperswithcode.com/datasets/DIODE-0000003656-f6985904.jpg" 
       alt="DIODE dataset example" 
       width="500">
       <p></p>
       <li><strong>ETH3D</strong>: Focuses on a structured set of outdoor scenes.</li>
+      <p></p>
       <img src="https://production-media.paperswithcode.com/datasets/Screenshot_2021-01-28_at_17.39.52.png" 
       alt="ETH3D dataset example" 
       width="500">
       <p></p>
       <li><strong>iBims-1</strong>: Contains a variety of indoor scenes.</li>
+      <p></p>
       <img src="https://production-media.paperswithcode.com/datasets/Screenshot_2021-06-07_at_14.20.27.png" 
       alt="iBims dataset example" 
       width="500">
       <p></p>
       <li><strong>KITTI</strong>: Covers inputs from urban driving scenarios.</li>
+      <p></p>
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSey01dHCg5imSCPm4-Va_D1_NCYBVh_GS9fA&s" 
       alt="KITTI dataset example" 
       width="500">
@@ -119,7 +146,9 @@
 
   <h2 id="custom-dataset">Custom Dataset</h2>
     In addition to testing on existing benchmarks, we introduce a custom dataset to evaluate model performance on images with systematic variations in acquisition properties that tend to be underrepresented in datasets. In particular, we focus on images with compositions that are underrepresented in existing datasets, looking at different vantage points and lighting conditions, as well as images taken with different camera paramters that determine the exposure of the image. Below is a scene from the McGregor breezeway, where we fix shutter speed, ISO, and aperture. We construct a grid by varying the other two parameters.
-  <div class="image-row">
+  
+    <p></p>
+    <div class="image-row">
     <figure>
       <img src="imgs/shutter_grid.jpg" alt="shutter speed grid">
       <figcaption>Fixed shutter speed. Vertical axis corresponds to ISO and horizontal axis corresponds to aperture.</figcaption>
@@ -147,10 +176,14 @@
       <li>Color Space Shifts</li>
     </ul>
     These transformations simulate realistic scenarios where lighting changes, motion blur, compression artifacts, may occur, or where accessible filters may be applied.
+    
     <p></p>
     <div style="text-align: center;">
-    <img src="imgs/degradations.png" alt="Brightness, blurring, injected noise, and color space manipulations" width="1250">
-    </div>
+      <figure>
+        <img src="imgs/degradations.png" alt="Brightness, blurring, injected noise, and color space manipulations" width="1250">
+        <figcaption>Left to right, brightness, blurring, injected noise, and color space manipulations.</figcaption>
+      </figure>
+  </div>
   </p>
 
   <h2 id="models">Models</h2>
@@ -174,7 +207,7 @@
     <div style="text-align: center;">
       <img src="imgs/depthanything.png" 
       alt="Depth Anything architecture" 
-      width="700">
+      width="900">
     </div>  
   </p>
 
@@ -185,7 +218,23 @@
   <div style="text-align: center;">
     <img src="imgs/unidepth.png" 
     alt="UniDepth architecture" 
-    width="700">
+    width="900">
   </div>
+  <script>
+    let lastScrollTop = 0;
+    const navbar = document.getElementById('navbar');
+
+    window.addEventListener('scroll', () => {
+      let scrollTop = window.pageYOffset || document.documentElement.scrollTop;
+
+      if (scrollTop > lastScrollTop) {
+        navbar.style.top = "-100px"; // hides nav
+      } else {
+        navbar.style.top = "0"; // shows nav
+      }
+
+      lastScrollTop = scrollTop;
+    });
+  </script>
 </body>
 </html>
