Fixed image size?

--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
     .nav-left a {
       font-size: 18px;
     }
+    figure {
+      width: 80%;
+    }
     .image-row figure {
       width: 80%;           /* stack images vertically on small screens */
     }
