Fixed image size??

--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
       color: #555;
       margin-top: 8px;
     }
+    img {
+      display: block;         /* avoid weird inline gaps */
+      max-width: 100%;        /* never overflow screen */
+      height: auto;
+      margin: 0 auto;         /* center by default */
+    }
     figure {
       max-width: 100%;     /* never overflow */
       text-align: center;
